about page angepasst, falsches Post entfernt

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: about
 	<h1>About</h1>
 	<p>Hello and welcome to my blog. My name is David and this is my blog. Once upon a time I studied molecular biology in Marburg (and also finished with a M.Sc.) but then switched over to computer science. At the moment I am working in Healthcare IT where I am mainly concerned with Admin and DevOps work. I am also studying to get my Bachelor of Science in Computer Science.</br></br> So what can you expect from this Blog?</br> I want to use this Blog to maybe present some of my big (and small) projects, as well as maybe some content from university. Overall it will revolve around computer science and IT</p><br></br>
 	<p>if you are interested in my work you may also visit my <a href="https://github.com/KuruGit">GitHub Page</a> or my Github-hosted <a href="https://kurugit.github.io/online-cv/">Resume</a></p></br></br>
-	you may also download my CV as a nice Latex generated PDF <a href="/cv.pdf">here</a>.
+	you may also download my CV as a nice Latex generated PDF <a href="/cv.pdf">here</a>
 
 
 </section>
