--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         </button>
     </div>
     <div class="bio">
-        Hallo und Willkommen auf meiner Seite. Mein Name ist David und ich bin Biologe und Informatiker. Momentan arbeite ich im spannenden Bereich der Healthcare IT und arbeite "nebenher" noch an meinem B.Sc. in Informatik. Auf dieser Seite werdet ihr hauptsächlich ein wildes Sammelsurium an Blogartikeln zu Themen bekommen, die mich bewegen. Das sind im wesentlichen Biologie und Naturwissenschaften, Computer Science, Linux und wie sich das alles zusammenführen lässt. Weitere Infos über meinen Werdegang, ein Impressum und einen Lebenslauf findet ihr auf der  <a href="{{ site.baseurl }}/about"> About me</a> Seite. Und nun, viel Spaß!
+        Hallo und Willkommen auf meiner Seite. Mein Name ist David und ich bin Biologe und Informatiker. Momentan arbeite ich im spannenden Bereich der Healthcare IT und arbeite "nebenher" noch an meinem B.Sc. in Informatik. Auf dieser Seite werdet ihr hauptsächlich ein wildes Sammelsurium an Blogartikeln zu Themen bekommen, die mich bewegen. Das sind im wesentlichen Biologie und Naturwissenschaften, Computer Science, Linux und wie sich das alles zusammenführen lässt. Weitere Infos über meinen Werdegang, ein Impressum und einen Lebenslauf findet ihr auf der  <a href="{{ site.baseurl }}/about/index.html"> About me</a> Seite. Und nun, viel Spaß!
         </p>
     </div>
 
