Karakeep Artikel geschrieben

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@ layout: about
 	<h1> The obligatory contact information</h1>
 	  <address>
     David Breier<br>		  
-    my website: <a href="http://www.herr-breier.de">
+    my website: <a href="http://herr-breier.de">
     www.herr-breier.de</a>.<br>
-    e-Mail: <a href="mailto:david.breier@outlook.de">Mail me!</a><br>
+    e-Mail: <a href="mailto:david@herr-breier.de">Mail me!</a><br>
     Phone: 0176 51828662<br>
     David Breier <br>
     Lerchenweg 19<br>
